--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,8 +9,8 @@ on:
       - main # Trigger on pull requests to the main branch
 
 env:
-  # IMAGE_NAME: ghcr.io/silvispilvis/go-file:latest
-  IMAGE_NAME: ghcr.io/${{ github.repository }}
+  IMAGE_NAME: ghcr.io/silvispilvis/go-file:latest
+  # IMAGE_NAME: ghcr.io/${{ github.repository }}
 
 jobs:
   build:
